# lpin-lias-android-sdk-v3

./: .gitignore  README.md  README_LICENSE.md  build.gradle  gradle.properties  settings.gradle
face/: .gitignore  README.md  build.gradle  consumer-rules.pro  lpin-android-authenticator-Info.md
face/src/main/: AndroidManifest.xml
face/src/main/assets/: model.optimized.mobile.pb  mtcnn.pb
face/src/main/cpp/: CMakeLists.txt  dlib_raw_rgb_image.cpp  dlib_raw_rgb_image.h  facedetector_impl_tf_android.h  facedetector_jni.cpp  imageutils_jni.cc  mtcnn.cpp  mtcnn.h
face/src/main/java/io/lpin/android/sdk/face/: Constants.kt  Face.java  FaceAuthenticator.kt  FaceAuthenticatorManager.kt  FaceAuthenticatorType.kt  FaceData.kt  FaceDetector.java  FaceRecognizer.java  FaceSharedPreferences.kt  HumanDetectionTestActivity.kt  LFaceCameraFragmentListener.kt  SingleReferenceAuthDecider.kt
face/src/main/java/io/lpin/android/sdk/face/database/: User.java  UserDao.kt  UserDatabase.kt  UserEntity.java
face/src/main/java/io/lpin/android/sdk/face/extenstions/: BitmapExt.kt  PermissionCheckFragment.java
face/src/main/java/io/lpin/android/sdk/face/liveness/: LivenessEyeBlink.kt
face/src/main/res/drawable/: circle_progress.xml  ic_shutter.xml
face/src/main/res/layout/: activity_camera.xml  activity_human_detection_test.xml  camera_activity.xml  camera_connection_fragment.xml  camera_content.xml
face/src/test/java/io/lpin/android/sdk/face/: SingleReferenceAuthDeciderTest.kt
gradle/: README.md
gradle/wrapper/: gradle-wrapper.properties
licensing-core/: build.gradle  consumer-rules.pro
licensing-core/src/main/java/io/lpin/android/sdk/licensing/: LiasApplicationContext.kt  LiasLicenseCanonicalJson.kt  LiasLicenseException.kt  LiasLicenseGate.kt  LiasLicenseModels.kt  LiasLicensePolicy.kt  LiasLicenseVerifier.kt  LiasLicensedFeature.kt
licensing-core/src/test/java/io/lpin/android/sdk/licensing/: LiasLicenseVerifierTest.kt
scanner/: .gitignore  README.md  build.gradle
scanner/src/main/: AndroidManifest.xml
scripts/: build_android_aars.sh  generate_license.sh
space/authenticator/: .gitignore  README.md  build.gradle
space/authenticator/src/main/: AndroidManifest.xml
space/authenticator/src/main/java/org/opencv/android/: Camera2Renderer.java  CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCamera2View.java  JavaCameraView.java
space/authenticator/src/main/res/drawable/: ic_close.xml  ic_close_disable.xml
space/authenticator/src/main/res/layout/: activity_space_authenticator_v2.xml  view_image_alert.xml
space/authenticator/src/main/res/values/: strings.xml
space/pixel-matching/: .gitignore  README.md  build.gradle
space/pixel-matching/src/main/cpp/: CMakeLists.txt  ImageCache.cpp  ImageCache.hpp  ImageConverter.cpp  ImageConverter.hpp  ImageProcessor.cpp  ImageProcessor.hpp  common.cpp  common_pleaseModifyThisWhenPorting.hpp  opencv-adapter-lib.cpp
tools/license-cli/: build.gradle  license-issuer.html
(+82 files in other folders)
